virement du padding sur p

--- a/sites/all/themes/atelierstheme/sass/components/_global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_global.scss
@@ -24,11 +24,11 @@ body {
 .text-presentation {
     
 
-    p {
-
-        padding:0 2vw;
-
-    }
+//    p {
+//
+//        padding:0 2vw;
+//
+//    }
 
     h1, h1.wtitle {
 
