titre nos services semi bold grossi

--- a/sites/all/themes/atelierstheme/sass/components/_autres-services.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_autres-services.scss
@@ -29,4 +29,12 @@
 
     }
 
+    h1 {
+
+        font-family: 'SourceSansProSemiBold';
+        font-size: 1.75rem;
+        margin: 1rem 0 2.5rem 0;
+
+    }
+
 }
