wip modifs : date dans actus + block nos services / autres services + gallerie header home

--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -19,6 +19,7 @@
 @import "components/atelier-actus";
 @import "components/autres-services";
 @import "components/don";
+@import "components/abo";
 @import "components/contact";
 @import "components/contact-confirmation";
 @import "components/footer";
