--- a/sites/all/themes/atelierstheme/sass/components/_date.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_date.scss
@@ -26,7 +26,9 @@
                 text-align: center;
 
                 @include breakpoint($tablet) {
-                    margin:auto;
+                    margin-left:auto;
+                    margin-right:auto;
+                    margin-bottom: 7px;
                  }
 
             }
