--- a/sites/all/themes/atelierstheme/sass/components/_home.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_home.scss
@@ -23,9 +23,11 @@
         background-size:cover;
         background-position:center;
         img{
-            display:none;
+            height:100%;
+            max-width:none;
             @include breakpoint($tablet){
-                display:block;
+                height:auto;
+                max-width:100%;
             }
         }
     }
