--- a/sites/all/themes/atelierstheme/sass/components/_offres-speciales.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_offres-speciales.scss
@@ -50,7 +50,8 @@
             margin-top: 20px;
 
             @include breakpoint($tablet) {
-
+                margin-right: 0%;
+                float: right;
              }
 
         }
