--- a/sites/all/themes/atelierstheme/sass/components/_home.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_home.scss
@@ -66,10 +66,10 @@
             text-align: center;
             
             @include breakpoint($tablet) {
-                display:inline-block;
+                //display:inline-block;
                 vertical-align: top;
                 width:50%;
-                margin: 1rem 0;
+                margin: 1rem auto;
                 //text-align: left;
             }
             
