--- a/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
@@ -7,69 +7,52 @@
 
     .triangles{
         @include triangles(transparent,transparent);
-        margin-top:-50px;
+        margin-top:-35px;
         @include breakpoint($tablet) {
             margin-top:-60px;
         }
     }
 
     .atelier-body {
-
         line-height: 1.4em;
         margin-left: 7%;
         margin-right: 7%;
         font-size:15px;
-
         @include breakpoint($laptop) {
-
             font-size:20px;
-
         }
-
-         @include breakpoint($laptopxl) {
-
+        @include breakpoint($laptopxl) {
             font-size:25px;
-
         }
-
         strong {
             font-weight: 800;
         }
-
         em {
             font-style: italic;
         }
-
     }
 
     .contact {
-
         @include btn($green);
         margin-left:auto;
         margin-right: auto;
         display: block;
-
         &:hover {
             color: white;
             text-decoration: red;
             cursor:pointer;
         }
-
     }
-
     .atelier-header-bg {
        img{
             display:block;
         }
-
     }
-
     .block-orange {
         width: 100%;
         height: 10vw;
         background-color: #f7941d;
     }
-
 .atelier-color {
     text-align:left;
         &.text {
@@ -98,7 +81,29 @@
     a {
         text-decoration: none;
     }
+
+    .pictotitlecontainer .pictotitle {
+
+        top: 30%;
+
+        @include breakpoint($tablet) {
+            top: 37%;
+        }
+
+    }
+
+    .pictotitlecontainer .title {
+
+        top: 67%;
+
+        @include breakpoint($tablet) {
+              top: 75%;
+        }
+
+    }
+
 }
+
 .atelier-liens {
    .active {
         padding-bottom: 0.1rem;
