--- a/sites/all/themes/atelierstheme/sass/components/_footer.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_footer.scss
@@ -71,9 +71,8 @@
             display: inline-block;
             background: url("../images/twitter_vert.svg") no-repeat;
             background-position: bottom;
-            height:2rem;
-            width:2rem;
-            margin: 0 0.5rem;
+            width:1.5rem;
+            margin: 0 0.15rem;
 
             &:hover {
 
@@ -82,9 +81,10 @@
 
             }
 
-            margin-left: 30px;
-
-           
+            @include breakpoint($tablet) {
+                width:2rem;
+                margin: 0 0.5rem;
+            }
 
         }
 
@@ -92,9 +92,8 @@
             display: inline-block;
             background: url("../images/linkedin_vert.svg") no-repeat;
             background-position: bottom;
-            height:2rem;
-            width:2rem;
-            margin: 0 0.5rem;
+            width:1.5rem;
+            margin: 0 0.15rem;
             &:hover {
 
                 background: url("../images/linkedin_blanc.svg") no-repeat;
@@ -102,7 +101,11 @@
 
             }
 
-           
+            @include breakpoint($tablet) {
+                width:2rem;
+                margin: 0 0.5rem;
+            }
+
         }
 
     }
