--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -31,4 +31,5 @@
 @import "components/offres-speciales";
 @import "components/date";
 @import "components/user";
+@import "components/bloc-grille-base";
 
