--- a/sites/all/themes/atelierstheme/sass/components/_presentation.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_presentation.scss
@@ -2,7 +2,11 @@
 
 .text-presentation {
 
-    padding: 3vw 5vw;
+    padding: 1vw 6vw;
+
+    @include breakpoint($laptopl) {
+        padding: 10px 85px;
+    }
 
     a {
 
