--- a/sites/all/themes/atelierstheme/sass/components/_bloc-grille-base.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_bloc-grille-base.scss
@@ -6,5 +6,17 @@
         padding: 10px 85px;
     }
 
+    a {
+
+        &:hover,
+        &:link,
+        &:active,
+        &:visited {
+            color: $green;
+        }
+
+    }
+
+}
 
 
