--- a/sites/all/themes/atelierstheme/sass/components/_home-services.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_home-services.scss
@@ -5,9 +5,9 @@
 .home-services {
     .container-containers {
         @include breakpoint($laptop) {
-                margin: 2rem auto;
-                display:table;
-                width:$laptop;
+//                margin: 2rem auto;
+//                display:table;
+//                width:$laptop;
                
             
         }
