--- a/sites/all/themes/atelierstheme/sass/components/_home.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_home.scss
@@ -18,7 +18,12 @@
     position:relative;
    
     .block-img {
-        width: 100%;
+        width: 141%;
+
+        @include breakpoint($laptop){
+            width: 100%;
+        }
+
         height: 100%;
         background-size:cover;
         background-position:center;
@@ -46,6 +51,7 @@
         width:100%;
         transform : translate(-50%,-50%);
         padding: 2rem;
+
         .title-bienvenue {
             font-family: PermanentMarker;
             font-size: 2rem;
@@ -59,10 +65,11 @@
             }
            
         }
+
         .par-bienvenue {
             font-family: 'SourceSansProLight';            
             margin: 2rem 0;
-            font-size:21px;
+            //font-size:21px;
             text-align: center;
             
             @include breakpoint($tablet) {
@@ -76,28 +83,38 @@
         }
         
        
-        .ateliers{
+        .ateliers {
+
             width:100%;
+
             .atelier{
                 @include atelier();
                 margin: 0.5rem 0;
                 img{
-                    width:50%;
+                    width:60%;
                 }
             }
-            @include breakpoint($tablet){
-                width:50%;
-                display:inline-block;
-                vertical-align: top;
-                margin:auto;
-                    .atelier{
-                        img{
-                         width:50%;
-                        }    
+
+        @include breakpoint($tablet){
+            width:63%;
+            display:inline-block;
+            vertical-align: top;
+            margin:auto;
+
+                .atelier{
+                    img{
+                     width:60%;
                     }
-                
+                }
             }
+
+        @include breakpoint($laptop){
+
+            width:50%;
+
         }
+    }
+
         .container-title-pictos {
             position: relative;
             .title-pictos {
@@ -154,30 +171,35 @@
     }
 }
 
+.home-body-padding {
+
+    padding: 3rem;
+
+}
+
 .home-body-actu {
     background-color: $lightgrey;
-    .actu {
-       padding: 3rem;
-        .im_offres {
-            @include breakpoint($tablet) {
-                @include grid-span(6,7);
-            }
+
+    .im_offres {
+        @include breakpoint($tablet) {
+            @include grid-span(6,7);
         }
-        
-        .body_offres {
-           
-            @include breakpoint($tablet) {
-                @include grid-span(6,1);
-            }
-        }
-        
     }
+
+    .body_offres {
+
+        @include breakpoint($tablet) {
+            @include grid-span(6,1);
+        }
+    }
+
 }
 
 .home-body-solidarite {
     .body_solidarite {
         padding: 0 30px;
         display: block;
+        text-align: center;
         @include breakpoint($tablet) {
            @include grid-span(6,7);
         }
