--- a/sites/all/themes/atelierstheme/sass/components/_don.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_don.scss
@@ -16,7 +16,7 @@
         .don-img {
             text-align: center;
             img{
-                 max-width:110px;
+                 max-width:90px;
             }
             @include grid-span(12,1);
         }
@@ -25,10 +25,10 @@
             margin : 1rem 0;
             h1{
                font-family: 'PermanentMarker';
-                font-size:2.5rem;
+                font-size:2rem;
             }
             h2{
-                font-size:1.8rem; 
+                font-size:1.25rem;
             }
            
         }
@@ -43,30 +43,36 @@
                
             }
         }
-        @include breakpoint($tablet){
+        @include breakpoint($mobilel){
             .don-img {
-                 @include grid-span(4,1);
+                img{
+                     max-width:110px;
+                }
+                 @include grid-span(7,1);
             }
             .don-txt {
                 @include grid-span(8,5);
                 margin : 1rem 0;
                 h1, h1.wtitle {
                    font-family: 'PermanentMarker';
-                    font-size:2.5rem;
+                    font-size:2.35rem;
                 }
                 h2{
-                    font-size:1.8rem; 
+                    font-size:1.25rem;
                 }
            
             }
             .don-btn {
-                @include grid-span(8,5)
+                @include grid-span(8,5);
           
             }
             
         }
          @include breakpoint($laptop){
             .don-img {
+                img{
+                     max-width:110px;
+                }
                  @include grid-span(2,1);
             }
             .don-txt {
@@ -77,7 +83,7 @@
                     font-size:2.5rem;
                 }
                 h2{
-                    font-size:1.8rem; 
+                    font-size:1.5rem;
                 }
            
             }
