--- a/sites/all/themes/atelierstheme/sass/components/_home-services.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_home-services.scss
@@ -5,9 +5,6 @@
 .home-services {
     .container-containers {
         @include breakpoint($laptop) {
-//                margin: 2rem auto;
-//                display:table;
-//                width:$laptop;
                
             
         }
@@ -32,6 +29,12 @@
                     }
                 }
 
+            .text-presentation {
+
+                 padding: 30px 30px 0 30px;
+
+            }
+
             @include breakpoint($mobilel) {
                 .picto{
                     margin-top : -15%;
@@ -54,28 +57,40 @@
                 display:table-cell;  
                 position: relative;
                 margin-top: 0%;
+                width: 424px;
+
                 .inner{
                     padding-top: 2rem;
 
-                    .text-presentation {
-
-                        padding-top: 12px;
-                    }
+//                    .text-presentation {
+//
+//                        padding: 30px 30px 0 30px;
+//                    }
 
                 }
+
                 .picto{
 
                     text-align: center;
                     img{
-                        max-width:175px;
+                        max-width:150px;
                     }
                 }
+
                 .pictomobile{
                     display:none;
                 }
+
                 .pictotitlecontainer {
                     display:block;
                      position: relative;
+
+                    .image {
+
+                        //min-width: 400px;
+
+                    }
+
                 }
 
             }
