--- a/sites/all/themes/atelierstheme/sass/variables/_typos.scss
+++ b/sites/all/themes/atelierstheme/sass/variables/_typos.scss
@@ -5,8 +5,8 @@ body{
             font-size:18px;
         }
 
-    font-size: 17px;
-    line-height: 1.65rem;
+    font-size: 14px;
+    line-height: 1.3em;
     font-family: 'SourceSansProRegular';
 }
 
@@ -22,6 +22,7 @@ h2{
     font-size: 1.2rem;
     font-weight: 700;
     margin: 0.5rem 0;
-    line-height: 3rem;
+    //line-height: 3rem;
+    line-height: 1.5em;
 }
 
