--- a/sites/all/themes/atelierstheme/sass/components/_global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_global.scss
@@ -208,7 +208,7 @@
             text-transform: uppercase;
             color: white;
 
-            font-size:20px;
+            font-size: 1.5rem;
 
             @include breakpoint($mobilel) {
                 font-size:25px;
