--- a/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
@@ -102,7 +102,8 @@
     }
     position: absolute;
     width: 100%;
-    bottom: -0.5rem;
+    bottom: 0.3rem;
+    font-size: 1.2rem;
 
     a {
      color:white;    
@@ -110,7 +111,7 @@
     }
     
     @include breakpoint($tablet) {
-         //font-size:1.3rem;
+         font-size:1.3rem;
          bottom: 1rem;
 
         .active {
