--- a/sites/all/themes/atelierstheme/sass/components/_date.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_date.scss
@@ -2,14 +2,13 @@
 
     text-transform: uppercase;
 
-    @include breakpoint($tablet) {
+     //@include breakpoint($tablet) {
         text-align: center;
         @include grid-span(2,11);
-     }
+     //}
 
     .day {
 
-        //float: right;
         display: block;
         clear: right;
 
@@ -24,11 +23,11 @@
             color: white;
             text-align: center;
 
-            @include breakpoint($tablet) {
+            //@include breakpoint($tablet) {
                 margin-left:auto;
                 margin-right:auto;
                 margin-bottom: 7px;
-             }
+             //}
 
         }
 
