--- a/sites/all/themes/atelierstheme/sass/components/_contact.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_contact.scss
@@ -71,8 +71,6 @@
     width: 100%;
     margin: 100px auto -100px auto;
     max-width: 570px;
-
-    text-align: center;
     color:white;
     text-transform: uppercase;
 
@@ -80,10 +78,12 @@
 
     .contactez-nous {
 
+        display: inline-block;
+        margin-left:20px;
         font-size:25px;
         position: relative;
         top: 50%;
-        @include translate(0%,-50%);
+        @include translate(0%,-100%);
 
     }
 
@@ -91,17 +91,19 @@
 
         width: 3em;
         /* float: left; */
-        margin-left: -44%;
+        //margin-left: -44%;
+        display: inline-block;
 
-        @include breakpoint($laptop) {
-
-            margin-left: -34%;
-
-        }
-
-        position: absolute;
+        //position: absolute;
         margin-top: 1em;
         stroke: white;
+
+    }
+
+
+    .block-contact-detail {
+
+        text-align: center;
 
     }
 
