--- a/sites/all/themes/atelierstheme/sass/components/_global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_global.scss
@@ -48,6 +48,12 @@
         font-family: 'SourceSansProItalic';
     }
 
+   strong {
+
+        font-family: "SourceSansProBold";
+
+    }
+
     ol {
         list-style: decimal;
         padding:0 4vw;
