--- a/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_ateliers.scss
@@ -39,6 +39,7 @@
 
 .atelier-color {
     text-align:left;
+
         &.text {
 
             h1 {
@@ -55,6 +56,7 @@
 
             ul {
                 margin-left: 15px;
+
                 li {
                     position: relative;
                     &:before{
@@ -69,6 +71,19 @@
                     margin-left:15px;
                     list-style: none inside none;
                 }
+            }
+
+               em {
+
+                font-family: 'SourceSansProItalic';
+
+            }
+
+            strong {
+
+                //font-family: "SourceSansProBold";
+                font-weight: 900;
+
             }
         }
     }
