--- a/sites/all/themes/atelierstheme/sass/components/_gallerie.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_gallerie.scss
@@ -73,7 +73,8 @@
 
 .offres-speciales-gallerie {
 
-    width: 900px;
+    max-width: 900px;
+    with:100%;
     height: auto;
 
     margin: 20px auto 20px auto;
