--- a/sites/all/themes/atelierstheme/sass/_wysiwyg.scss
+++ b/sites/all/themes/atelierstheme/sass/_wysiwyg.scss
@@ -1,7 +1,8 @@
 body{
 
-    font-family: arial;
-
+    font-size: 14px;
+    line-height: 1.3em;
+    font-family: 'SourceSansProRegular';
 }
 
 p{
@@ -13,16 +14,21 @@ p{
 
 h1{
     &.wtitle{
-        font-size:2em;
-
+        text-transform: uppercase;
+        font-size: 1.5rem;
+        font-weight: 700;
+        margin: 0.5rem 0;
+        line-height: 1.75rem;
     }
 }
 
 h2{
     &.wsubtitle{
-        font-size:1.5em;
-        color: black;
-        //color: #f7941d;
-
+        text-transform: uppercase;
+        font-size: 1.2rem;
+        font-weight: 700;
+        margin: 0.5rem 0;
+        //line-height: 3rem;
+        line-height: 1.5em;
     }
 }
