--- a/sites/all/themes/atelierstheme/sass/components/_global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_global.scss
@@ -214,7 +214,7 @@
             text-transform: uppercase;
             color: white;
 
-            font-size: 1.5rem;
+            font-size: 1.05rem;
 
             @include breakpoint($mobilel) {
                 font-size:25px;
@@ -296,21 +296,21 @@
     .twitter-img {
         display: inline-block;
         background: url("../images/twitter_blanc.svg") no-repeat;
-        height:2rem;
-        width:2rem;
-        margin: 0 0.5rem;
+        height: 1.5rem;
+        width: 1.5rem;
+        margin: 0 5%;
         &:hover {
             background: url("../images/twitter_vert.svg") no-repeat;
         }
-        margin-left: 30px;
+        margin-left: 10%;
     }
 
     .linkedin-img {
         display: inline-block;
         background: url("../images/linkedin_blanc.svg") no-repeat;
-        height:2rem;
-        width:2rem;
-        margin: 0 2rem;
+        height: 1.5rem;
+        width: 1.5rem;
+        margin: 0 6%;
 
         &:hover {
             background: url("../images/linkedin_vert.svg") no-repeat;
