--- a/sites/all/themes/atelierstheme/sass/components/_menu.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_menu.scss
@@ -186,7 +186,7 @@
 
             a {
 
-                padding: 2rem 3rem 1.5rem 3rem;
+                padding: 4.5% 3% 4.5% 3%;
                 display: block;
                 margin:auto;
 
@@ -217,7 +217,7 @@
 
             a {
 
-                padding: 2rem 3rem 1.5rem 3rem;
+                padding: 4.5% 3% 4.5% 3%;
                 display: block;
                 margin-left: auto;
 
@@ -249,7 +249,7 @@
 
                     a {
 
-                        padding: 2rem 3rem 1.5rem 6rem;
+                        padding: 4.5% 3% 4.5% 6%;
 
                         &:after {
 
@@ -304,24 +304,19 @@
 
 
 .logo {
-        width: 10rem;
+        width: 26%;
         margin: 0 auto;
         display: block;
-        margin-top: 3rem;
+        margin-top: 5%;
     }
 
     .reseaux {
         display: block;
         text-align: center;
-        padding-top: 2.5rem;
+        padding-top: 5%;
         color:white;
         font-size: 2rem;
         position: relative;
-
-        img {
-            width: 2rem;
-            margin:0 2.5rem;
-        }
 
         div {
 
