--- a/sites/all/themes/atelierstheme/sass/components/_bloc-grille-base.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_bloc-grille-base.scss
@@ -8,4 +8,12 @@
 
 }
 
+.bloc-grille-base-offres {
 
+    padding: 0 0 5vw 0;
+
+    @include breakpoint($laptopl) {
+        padding: 0 0 60px 0;
+    }
+
+}
