wip surbrillance atelier dans détails actualités

--- a/sites/all/themes/atelierstheme/sass/components/_bloc-grille-base.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_bloc-grille-base.scss
@@ -17,3 +17,13 @@
     }
 
 }
+
+.offre-speciale-detail img {
+
+    padding: 0 0 5vw 0;
+
+    @include breakpoint($laptopl) {
+        padding: 0 0 60px 0;
+    }
+
+}
