--- a/sites/all/themes/atelierstheme/sass/components/_gallerie.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_gallerie.scss
@@ -59,7 +59,6 @@
         }
 
 
-
         .atelier-gallerie-image {
 
             display: inline-block;
@@ -88,6 +87,18 @@
     @include breakpoint($laptopl) {
 
         margin: 40px auto 40px auto;
+
+    }
+
+    .offres-speciales-gallerie-image {
+
+        img {
+
+            display: block;
+            margin: 0 auto;
+            float: none;
+
+        }
 
     }
 
