--- a/sites/all/themes/atelierstheme/sass/components/_home-services.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_home-services.scss
@@ -5,7 +5,10 @@
 .home-services {
     .container-containers {
         @include breakpoint($laptop) {
-               
+
+            display: table;
+            margin: 0px auto;
+            vertical-align: middle;
             
         }
         .container {
@@ -57,16 +60,10 @@
                 display:table-cell;  
                 position: relative;
                 margin-top: 0%;
-                width: 424px;
+                max-width: 424px;
 
                 .inner{
                     padding-top: 2rem;
-
-//                    .text-presentation {
-//
-//                        padding: 30px 30px 0 30px;
-//                    }
-
                 }
 
                 .picto{
@@ -87,7 +84,11 @@
 
                     .image {
 
-                        //min-width: 400px;
+                        img {
+
+                            width:100%;
+
+                        }
 
                     }
 
