--- a/sites/all/themes/atelierstheme/sass/components/_abo.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_abo.scss
@@ -3,7 +3,7 @@
 @import "../variables/mixin";
 
 .bloc_abo {
-    background-color:$lightgrey;
+    background-color:$grey_3;
     padding:1rem;
 
     .inner {
