--- a/sites/all/themes/atelierstheme/sass/variables/_typos.scss
+++ b/sites/all/themes/atelierstheme/sass/variables/_typos.scss
@@ -2,10 +2,10 @@ body{
 
     @include breakpoint($tablet) {
 
-            font-size:18px;
+            font-size:19px;
         }
 
-    font-size: 14px;
+    font-size: 15px;
     line-height: 1.3em;
     font-family: 'SourceSansProRegular';
 }
@@ -14,7 +14,7 @@ h1{
    text-transform: uppercase;
     font-size: 1.5rem;
     font-weight: 700;
-    margin: 0.5rem 0;
+    margin: 0 0 0.5rem 0;
     line-height: 1.75rem;
 }
 
@@ -22,7 +22,7 @@ h2{
     text-transform: uppercase;
     font-size: 1.2rem;
     font-weight: 700;
-    margin: 0.5rem 0;
+    margin: 0 0 0.5rem 0;
     //line-height: 3rem;
     line-height: 1.5em;
 }
