--- a/sites/all/themes/atelierstheme/sass/components/_menu.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_menu.scss
@@ -202,7 +202,7 @@
 
                 content:"";
                 border-bottom: solid 1px white;
-                margin:0 2rem;
+                margin:2rem 0.5em;
                 display: block;
 
             }
