--- a/sites/all/themes/atelierstheme/sass/components/_contact-confirmation.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_contact-confirmation.scss
@@ -2,7 +2,7 @@
 
     max-width: 570px;
     width:100%;
-    margin: 100px auto;
+    margin: 0 auto 100px auto;
     background-color: #d8d8d8;
     padding: 100px;
 
