--- a/sites/all/themes/atelierstheme/sass/components/_home.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_home.scss
@@ -18,10 +18,10 @@
     position:relative;
    
     .block-img {
-        width: 141%;
+        width: 200%;
 
         @include breakpoint($laptop){
-            width: 100%;
+            width: 200%;
         }
 
         height: 100%;
@@ -38,7 +38,7 @@
     }
     .block-w {
         @include breakpoint($mobilem){
-            width:80%;
+            //width:90%;
         }
        
         color: white;
