--- a/sites/all/themes/atelierstheme/sass/components/_global.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_global.scss
@@ -238,7 +238,7 @@
     clear: both;
     padding: 0;
     text-align: right;
-    margin: 50px 50px 0 50px;
+    margin: 50px;
 
     .pager__item--current {
 
