--- a/sites/all/themes/atelierstheme/sass/components/_offres-speciales.scss
+++ b/sites/all/themes/atelierstheme/sass/components/_offres-speciales.scss
@@ -10,3 +10,18 @@
 
 }
 
+.offres-speciales {
+
+    .bloc-grille-base {
+
+        padding: 0;
+        margin: 5vw 5vw 0px 8vw;
+
+        @include breakpoint($laptopl) {
+            padding: 0;
+            margin: 60px 60px 0px 100px;
+        }
+
+    }
+
+}
