wip : le bloc adresse est modifiable dans le back - office

--- a/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
+++ b/sites/all/themes/atelierstheme/sass/atelierstheme.styles.scss
@@ -31,5 +31,6 @@
 @import "components/offres-speciales";
 @import "components/date";
 @import "components/user";
+@import "components/adresses";
 @import "components/bloc-grille-base";
 
